[tool.poetry]
name = "a0lite"
version = "0.1.0"
description = "A neural net chess engine in 95 lines of python"
authors = ["dkappe"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
badgyal = {git = "https://github.com/dkappe/badgyal.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
