[tool.poetry]
name = "a0lite"
version = "0.1.0"
description = "A neural net chess engine in 95 lines of python"
authors = ["dkappe"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
badgyal = {git = "https://github.com/dkappe/badgyal.git"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
